--- a/src/components/Slide/Slide.scss
+++ b/src/components/Slide/Slide.scss
@@ -6,7 +6,7 @@
     font-size: 26px;
     position: fixed;
     right: 20px;
-    top: 72px;
+    top: 38px;
   }
 
   &--rainbow .Slide__counter {
